--- a/main.html
+++ b/main.html
@@ -1,5 +1,10 @@
 <html>
   <body>
-    <title></title>
+    <title>Warhammer Roster Maker</title>
+    <h>
+      <center>Warhammer</center>
+    </h>
+
+
   </body>
 </html>
