--- a/main.html
+++ b/main.html
@@ -1,10 +1,30 @@
 <html>
-  <body>
+  <head>
     <title>Warhammer Roster Maker</title>
-    <h1>
-      <center>Warhammer</center>
-    </h>
-
-
+  </head>
+  <body style = "background-color:dimgray;padding-left:120; padding-right:120; padding-bottom: 60">
+    <div style="padding-left:120; padding-right:120; background-color:lightgrey; min-height: 900">
+      <h1>
+        <center>Warhammer</center>
+      </h1>
+    <br>
+      <p>
+        WELCOME
+      </p>
+      <table width = "100%">
+        <tr>
+          <th>Here are some of the factions you can play:</th>
+        </tr>
+        <td>
+          <a href = "https://warhammer40k.fandom.com/wiki/Space_Marines" ><img src = "images/spacemarines.jpg"/></a>
+        </td>
+        <td>
+          <a href = "https://warhammer40k.fandom.com/wiki/Chaos_Space_Marines"> <img src = "images/csm.jpg" /> </a>
+        </td>
+        <td>
+          <a href = "https://warhammer40k.fandom.com/wiki/Thousand_Sons"> <img src = "images/thousandsons.png"/> </a>
+        </td>
+      </table>
+    </div>
   </body>
 </html>
