--- a/main.html
+++ b/main.html
@@ -12,18 +12,27 @@
         WELCOME
       </p>
       <table width = "100%">
-        <tr>
-          <th>Here are some of the factions you can play:</th>
+        <tr width = "100%">
+          <th colspan="3">Some of the Factions</th>
         </tr>
-        <td>
-          <a href = "https://warhammer40k.fandom.com/wiki/Space_Marines" ><img src = "images/spacemarines.jpg"/></a>
-        </td>
-        <td>
-          <a href = "https://warhammer40k.fandom.com/wiki/Chaos_Space_Marines"> <img src = "images/csm.jpg" /> </a>
-        </td>
-        <td>
-          <a href = "https://warhammer40k.fandom.com/wiki/Thousand_Sons"> <img src = "images/thousandsons.png"/> </a>
-        </td>
+        <tr>
+          <td>
+            <center>
+              <a href = "https://warhammer40k.fandom.com/wiki/Space_Marines" target = "_blank" title ="Click for Faction Info"><img src = "images/spacemarines.jpg" alt = "Space Marine" width = "250" height="320"/></a>
+            </center>
+          </td>
+          <td>
+            <center>
+              <a href = "https://warhammer40k.fandom.com/wiki/Chaos_Space_Marines" target = _blank  title ="Click for Faction Info"> <img src = "images/csm.jpg" alt = "Chaos Space Marine" width = "250" height="320"/> </a>
+            </center>
+          </td>
+          <td>
+            <center>
+              <a href = "https://warhammer40k.fandom.com/wiki/Thousand_Sons" target = "_blank"  title ="Click for Faction Info"> <img src = "images/thousandsons.png" alt = "Thousand Sons" width = "250" height="320"/> </a>
+            </center>
+          </td>
+        </tr>
+
       </table>
     </div>
   </body>
