--- a/main.html
+++ b/main.html
@@ -19,6 +19,9 @@
           <td>
             <center>
               <a href = "https://warhammer40k.fandom.com/wiki/Space_Marines" target = "_blank" title ="Click for Faction Info"><img src = "images/spacemarines.jpg" alt = "Space Marine" width = "250" height="320"/></a>
+              <nav>
+                <a href = "spacemarine.html" title = "Click for roster"></a>
+              </nav>
             </center>
           </td>
           <td>
