--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </tr>
         <tr>
           <nav>
-            <a href = "spacemarine.html" title = "Click for roster"></a>
+            <a href = "spacemarine.html" title = "Click for roster">Click for Roster</a>
           </nav>
         </tr>
 
