--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
         </tr>
         <tr>
           <td>
-          <nav>
-            <a href = "spacemarine.html" title = "Click for roster">Click for Roster</a>
-          </nav>  
+            <center>
+              <nav>
+                <a href = "spacemarine.html" title = "Click for roster">Click for Roster</a>
+              </nav>
+            </center>
           </td>
        
         </tr>
