--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body style = "background-color:dimgray;padding-left:120; padding-right:120; padding-bottom: 60">
     <div style="padding-left:120; padding-right:120; background-color:lightgrey; min-height: 900">
       <h1>
-        <center>Warhammer</center>
+        <center>Warhammer 40,000 Roster Maker</center>
       </h1>
     <br>
       <p>
