--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       </h1>
     <br>
       <p>
-        WELCOME
+          Click on an image to view lore about that faction
       </p>
       <table width = "100%">
         <tr width = "100%">
-          <th colspan="3">Some of the Factions</th>
+          <th colspan="3">Factions:</th>
         </tr>
         <tr>
           <td>
@@ -40,7 +40,20 @@
               </nav>
             </center>
           </td>
-       
+          <td>
+            <center>
+              <nav>
+                <a href = "csm.html" title = "Click for roster">Click for Roster</a>
+              </nav>
+            </center>
+          </td>
+          <td>
+            <center>
+              <nav>
+                <a href = "thousandsons.html" title = "Click for roster">Click for Roster</a>
+              </nav>
+            </center>
+          </td>
         </tr>
 
       </table>
