--- a/thousandsons.html
+++ b/thousandsons.html
@@ -7,6 +7,9 @@
       <h1>
         <center>Thousand Sons Roster</center>
       </h1>
+      <nav>
+       <a href = "index.html" title = "Back to main">Click to go back to the main page</a>
+      </nav>
     </div>
   </body>  
 </html>
