--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
               <nav>
                 <a href = "spacemarine.html" title = "Click for roster">Click for Roster</a>
               </nav>
+              Test
             </center>
           </td>
           <td>
