--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
               <nav>
                 <a href = "spacemarine.html" title = "Click for roster">Click for Roster</a>
               </nav>
-              Test
+              "They shall be my finest warriors, these men who give of themselves to me. Like clay I shall mould them and in the furnace of war I shall forge them. 
+              They shall be of iron will and steely sinew. In great armour I shall clad them and with the mightiest weapons shall they be armed. 
+              They will be untouched by plague or disease; no sickness shall blight them. 
+              They shall have such tactics, strategies and machines that no foe will best them in battle. They are my bulwark against the Terror. 
+              They are the Defenders of Humanity. They are my Space Marines...and they shall know no fear."
             </center>
           </td>
           <td>
@@ -46,6 +50,7 @@
               <nav>
                 <a href = "csm.html" title = "Click for roster">Click for Roster</a>
               </nav>
+              "Death to the False Emperor! Death to the weakling Imperium of Mankind!"
             </center>
           </td>
           <td>
@@ -53,6 +58,8 @@
               <nav>
                 <a href = "thousandsons.html" title = "Click for roster">Click for Roster</a>
               </nav>
+              "The minds of gods are not for mortals to know, or to judge. Accept that Tzeentch has a place for all of us in his grand scheme, 
+              and be happy in the part you have to play."
             </center>
           </td>
         </tr>
