--- a/index.html
+++ b/index.html
@@ -38,11 +38,7 @@
               <nav>
                 <a href = "spacemarine.html" title = "Click for roster">Click for Roster</a>
               </nav>
-              "They shall be my finest warriors, these men who give of themselves to me. Like clay I shall mould them and in the furnace of war I shall forge them. 
-              They shall be of iron will and steely sinew. In great armour I shall clad them and with the mightiest weapons shall they be armed. 
-              They will be untouched by plague or disease; no sickness shall blight them. 
-              They shall have such tactics, strategies and machines that no foe will best them in battle. They are my bulwark against the Terror. 
-              They are the Defenders of Humanity. They are my Space Marines...and they shall know no fear."
+              "They are the Defenders of Humanity. They are my Space Marines...and they shall know no fear."
             </center>
           </td>
           <td>
