--- a/index.html
+++ b/index.html
@@ -18,16 +18,19 @@
         <tr>
           <td>
             <center>
+              Space Marines
               <a href = "https://warhammer40k.fandom.com/wiki/Space_Marines" target = "_blank" title ="Click for Faction Info"><img src = "images/spacemarines.jpg" alt = "Space Marine" width = "250" height="320"/></a>
             </center>
           </td>
           <td>
             <center>
+              Chaos Space Marines
               <a href = "https://warhammer40k.fandom.com/wiki/Chaos_Space_Marines" target = _blank  title ="Click for Faction Info"> <img src = "images/csm.jpg" alt = "Chaos Space Marine" width = "250" height="320"/> </a>
             </center>
           </td>
           <td>
             <center>
+              Thousand Sons
               <a href = "https://warhammer40k.fandom.com/wiki/Thousand_Sons" target = "_blank"  title ="Click for Faction Info"> <img src = "images/thousandsons.png" alt = "Thousand Sons" width = "250" height="320"/> </a>
             </center>
           </td>
