--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         <tr>
           <td>
             <center>
-              Space Marines
+              <p>Space Marines</p>
               <a href = "https://warhammer40k.fandom.com/wiki/Space_Marines" target = "_blank" title ="Click for Faction Info"><img src = "images/spacemarines.jpg" alt = "Space Marine" width = "250" height="320"/></a>
             </center>
           </td>
           <td>
             <center>
-              Chaos Space Marines
+              <p>Chaos Space Marines</p>
               <a href = "https://warhammer40k.fandom.com/wiki/Chaos_Space_Marines" target = _blank  title ="Click for Faction Info"> <img src = "images/csm.jpg" alt = "Chaos Space Marine" width = "250" height="320"/> </a>
             </center>
           </td>
           <td>
             <center>
-              Thousand Sons
+              <p>Thousand Sons</p>
               <a href = "https://warhammer40k.fandom.com/wiki/Thousand_Sons" target = "_blank"  title ="Click for Faction Info"> <img src = "images/thousandsons.png" alt = "Thousand Sons" width = "250" height="320"/> </a>
             </center>
           </td>
@@ -41,7 +41,7 @@
               <nav>
                 <a href = "spacemarine.html" title = "Click for roster">Click for Roster</a>
               </nav>
-              "They are the Defenders of Humanity. They are my Space Marines...and they shall know no fear."
+              <p>"They are the Defenders of Humanity. They are my Space Marines...and they shall know no fear."</p>
             </center>
           </td>
           <td>
@@ -49,7 +49,7 @@
               <nav>
                 <a href = "csm.html" title = "Click for roster">Click for Roster</a>
               </nav>
-              "Death to the False Emperor! Death to the weakling Imperium of Mankind!"
+              <p>"Death to the False Emperor! Death to the weakling Imperium of Mankind!"</p>
             </center>
           </td>
           <td>
@@ -57,8 +57,8 @@
               <nav>
                 <a href = "thousandsons.html" title = "Click for roster">Click for Roster</a>
               </nav>
-              "The minds of gods are not for mortals to know, or to judge. Accept that Tzeentch has a place for all of us in his grand scheme, 
-              and be happy in the part you have to play."
+              <p>"The minds of gods are not for mortals to know, or to judge. Accept that Tzeentch has a place for all of us in his grand scheme, 
+                and be happy in the part you have to play."</p>
             </center>
           </td>
         </tr>
