--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
     <title>Warhammer Roster Maker</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
-  <body style = "background-color:dimgray;padding-left:120; padding-right:120; padding-bottom: 60">
-    <div style="padding-left:120; padding-right:120; background-color:lightgrey; min-height: 900">
-      <h1>
+  <body>
+    <div id = "div1" >
+      <h1 class = "header">
         <center>Warhammer 40,000 Roster Maker</center>
       </h1>
     <br>
@@ -40,7 +41,7 @@
               </nav>
               <details>
                 <summary>Space Marines</summary>
-                <p>"They are the Defenders of Humanity. They are my Space Marines...and they shall know no fear."</p>
+                <p class = "descriptor">"They are the Defenders of Humanity. They are my Space Marines...and they shall know no fear."</p>
               </details>
             </center>
           </td>
@@ -51,7 +52,7 @@
               </nav>
               <details>
                 <summary>Chaos Space Marines</summary>
-                 <p>"Death to the False Emperor! Death to the weakling Imperium of Mankind!"</p>
+                 <p class = "descriptor">"Death to the False Emperor! Death to the weakling Imperium of Mankind!"</p>
               </details>
             </center>
           </td>
@@ -62,7 +63,7 @@
               </nav>
               <details>
                 <summary>Thousand Sons</summary>
-                <p>"The minds of gods are not for mortals to know, or to judge. Accept that Tzeentch has a place for all of us in his grand scheme, 
+                <p class = "descriptor">"The minds of gods are not for mortals to know, or to judge. Accept that Tzeentch has a place for all of us in his grand scheme,
                 and be happy in the part you have to play."</p>
               </details>
             </center>
