--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
       <p>
           Click on an image to view lore about that faction
       </p>
-      <table width = "100%">
+      <table class="factions" width = "100%">
         <tr width = "100%">
-          <th colspan="3">Factions:</th>
+          <th class = "thead" colspan="3">Factions:</th>
         </tr>
         <tr>
-          <td>
+          <td class = "sm">
             <center>
               <a href = "https://warhammer40k.fandom.com/wiki/Space_Marines" target = "_blank" title ="Click for Faction Info"><img src = "images/spacemarines.jpg" alt = "Space Marine" width = "250" height="320"/></a>
             </center>
           </td>
-          <td>
+          <td class="csm">
             <center>
               <a href = "https://warhammer40k.fandom.com/wiki/Chaos_Space_Marines" target = _blank  title ="Click for Faction Info"> <img src = "images/csm.jpg" alt = "Chaos Space Marine" width = "250" height="320"/> </a>
             </center>
           </td>
-          <td>
+          <td class="ts">
             <center>
               <a href = "https://warhammer40k.fandom.com/wiki/Thousand_Sons" target = "_blank"  title ="Click for Faction Info"> <img src = "images/thousandsons.png" alt = "Thousand Sons" width = "250" height="320"/> </a>
             </center>
           </td>
         </tr>
-        <tr>
+        <tr class = "bottomrow">
           <td>
             <center>
               <nav>
