--- a/index.html
+++ b/index.html
@@ -72,5 +72,17 @@
 
       </table>
     </div>
+    <div id = "div2" >
+        <h2 class = "header">
+          <center>Sign up for Newsletter!:</center>
+          <form action="http://examples.funwebdev.com/process.php" method="GET" >
+            First name: <input type = "text" name = "first_name" />
+            Last name: <input type = "text" name = "last_name" />
+            Email Address: <input type = "text" name = "email_address" />
+            <input type = "radio" name = "newsletter" value = "newsletter_yes"> Sign me up to receive the newsletter!
+            
+          </form>
+        </h2>
+    </div>
   </body>
 </html>
