--- a/index.html
+++ b/index.html
@@ -8,87 +8,99 @@
       <h1 class = "header">
         <center>Warhammer 40,000 Roster Maker</center>
       </h1>
-    <br>
-      <p>
-          Click on an image to view lore about that faction
-      </p>
-      <table class="factions" width = "100%">
-        <tr width = "100%">
-          <th class = "thead" colspan="3">Factions:</th>
-        </tr>
-        <tr>
-          <td class = "sm">
-            <center>
-              <a href = "https://warhammer40k.fandom.com/wiki/Space_Marines" target = "_blank" title ="Click for Faction Info"><img src = "images/spacemarines.jpg" alt = "Space Marine" width = "250" height="320"/></a>
-            </center>
-          </td>
-          <td class="csm">
-            <center>
-              <a href = "https://warhammer40k.fandom.com/wiki/Chaos_Space_Marines" target = _blank  title ="Click for Faction Info"> <img src = "images/csm.jpg" alt = "Chaos Space Marine" width = "250" height="320"/> </a>
-            </center>
-          </td>
-          <td class="ts">
-            <center>
-              <a href = "https://warhammer40k.fandom.com/wiki/Thousand_Sons" target = "_blank"  title ="Click for Faction Info"> <img src = "images/thousandsons.png" alt = "Thousand Sons" width = "250" height="320"/> </a>
-            </center>
-          </td>
-        </tr>
-        <tr class = "bottomrow">
-          <td>
-            <center>
-              <nav>
-                <a href = "spacemarine.html" title = "Click for roster">Click for Roster</a>
-              </nav>
-              <details>
-                <summary>Space Marines</summary>
-                <p class = "descriptor">"They are the Defenders of Humanity. They are my Space Marines...and they shall know no fear."</p>
-              </details>
-            </center>
-          </td>
-          <td>
-            <center>
-              <nav>
-                <a href = "csm.html" title = "Click for roster">Click for Roster</a>
-              </nav>
-              <details>
-                <summary>Chaos Space Marines</summary>
-                 <p class = "descriptor">"Death to the False Emperor! Death to the weakling Imperium of Mankind!"</p>
-              </details>
-            </center>
-          </td>
-          <td>
-            <center>
-              <nav>
-                <a href = "thousandsons.html" title = "Click for roster">Click for Roster</a>
-              </nav>
-              <details>
-                <summary>Thousand Sons</summary>
-                <p class = "descriptor">"The minds of gods are not for mortals to know, or to judge. Accept that Tzeentch has a place for all of us in his grand scheme,
-                and be happy in the part you have to play."</p>
-              </details>
-            </center>
-          </td>
-        </tr>
-        
-      </table>
-      <h2 class = "header">
-        <center>Sign up for Newsletter!:</center>
-        <form action="http://examples.funwebdev.com/process.php" method="GET" >
-          <br>First name: <input type = "text" name = "first_name" />
-          <br>Last name: <input type = "text" name = "last_name" />
-          <br>Email Address: <input type = "text" name = "email_address" />
-          <br><input type = "radio" name = "newsletter" value = "newsletter_yes"> Sign me up to receive the newsletter!
-          <br><label for="favfaction">Choose your favorite faction!:</label>
+      <br>
+      <div class = "leftcol">
+        afibdhahifpda
+      </div>
+      <div class = "midcol">
+        <p>
+            <center> Click on an image to view lore about that faction </center>
+        </p>
 
-            <select name="favfaction" id="favfaction">
-              <option value="spacemarines">Space Marines</option>
-              <option value="chaosmarines">Chaos Space Marines</option>
-              <option value="thousandsons">Thousand Sons</option>
-              
-            </select>
-          <br><input type = "submit" name = "submit" value = "Submit" />
-          <br><input type = "reset" name = "reset"  value = "Reset" />
-        </form>
-      </h2>
+          <table class="factions" width = "100%">
+            <tr width = "100%">
+              <th class = "thead" colspan="3">Factions:</th>
+            </tr>
+            <tr>
+              <td class = "sm">
+                <center>
+                  <a href = "https://warhammer40k.fandom.com/wiki/Space_Marines" target = "_blank" title ="Click for Faction Info"><img src = "images/spacemarines.jpg" alt = "Space Marine" width = "250" height="320"/></a>
+                </center>
+              </td>
+              <td class="csm">
+                <center>
+                  <a href = "https://warhammer40k.fandom.com/wiki/Chaos_Space_Marines" target = _blank  title ="Click for Faction Info"> <img src = "images/csm.jpg" alt = "Chaos Space Marine" width = "250" height="320"/> </a>
+                </center>
+              </td>
+              <td class="ts">
+                <center>
+                  <a href = "https://warhammer40k.fandom.com/wiki/Thousand_Sons" target = "_blank"  title ="Click for Faction Info"> <img src = "images/thousandsons.png" alt = "Thousand Sons" width = "250" height="320"/> </a>
+                </center>
+              </td>
+            </tr>
+            <tr class = "bottomrow">
+              <td>
+                <center>
+                  <nav>
+                    <a href = "spacemarine.html" title = "Click for roster">Click for Roster</a>
+                  </nav>
+                  <details>
+                    <summary>Space Marines</summary>
+                    <p class = "descriptor">"They are the Defenders of Humanity. They are my Space Marines...and they shall know no fear."</p>
+                  </details>
+                </center>
+              </td>
+              <td>
+                <center>
+                  <nav>
+                    <a href = "csm.html" title = "Click for roster">Click for Roster</a>
+                  </nav>
+                  <details>
+                    <summary>Chaos Space Marines</summary>
+                     <p class = "descriptor">"Death to the False Emperor! Death to the weakling Imperium of Mankind!"</p>
+                  </details>
+                </center>
+              </td>
+              <td>
+                <center>
+                  <nav>
+                    <a href = "thousandsons.html" title = "Click for roster">Click for Roster</a>
+                  </nav>
+                  <details>
+                    <summary>Thousand Sons</summary>
+                    <p class = "descriptor">"The minds of gods are not for mortals to know, or to judge. Accept that Tzeentch has a place for all of us in his grand scheme,
+                    and be happy in the part you have to play."</p>
+                  </details>
+                </center>
+              </td>
+            </tr>
+
+          </table>
+        </div>
+        <div class="rightcol">
+          <br>
+          <br>
+          <br>
+          <br>
+
+            <center>Sign up for Newsletter!:</center>
+            <form action="http://examples.funwebdev.com/process.php" method="GET" >
+              <br>First name:<br> <input type = "text" name = "first_name" />
+              <br>Last name:<br> <input type = "text" name = "last_name" />
+              <br>Email Address:<br> <input type = "text" name = "email_address" />
+              <br><input type = "radio" name = "newsletter" value = "newsletter_yes"> Sign me up to receive the newsletter!
+              <br><label for="favfaction">Choose your favorite faction!:</label>
+
+                <select name="favfaction" id="favfaction">
+                  <option value="spacemarines">Space Marines</option>
+                  <option value="chaosmarines">Chaos Space Marines</option>
+                  <option value="thousandsons">Thousand Sons</option>
+
+                </select>
+              <br><input type = "submit" name = "submit" value = "Submit" />
+              <br><input type = "reset" name = "reset"  value = "Reset" />
+            </form>
+        </div>
+    </div>
   </body>
 </html>
