--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         <center>Warhammer 40,000 Roster Maker</center>
       </h1>
       <br>
-      <div class = "leftcol">
-        afibdhahifpda
+      <div class="leftcol">
+          afibdhahifpda
+          <img src="images/propa1.jpg" alt="Propaganda1" width="250" height="520" />
       </div>
       <div class = "midcol">
         <p>
