--- a/index.html
+++ b/index.html
@@ -22,19 +22,34 @@
               <th class = "thead" colspan="3">Factions:</th>
             </tr>
             <tr>
-              <td class = "sm">
+              <td class = "sm fimage">
                 <center>
-                  <a href = "https://warhammer40k.fandom.com/wiki/Space_Marines" target = "_blank" title ="Click for Faction Info"><img src = "images/spacemarines.jpg" alt = "Space Marine" width = "250" height="320"/></a>
+                  <figure class="thumbnail">
+                    <img src = "images/spacemarines.jpg" alt = "Space Marine" width = "250" height="320"/>
+                  <figcaption class="popup">
+                    <a href = "https://warhammer40k.fandom.com/wiki/Space_Marines" target = "_blank" title ="Click for Faction Info"><img src = "images/spacemarines.jpg" /></a>
+                  </figcaption>
+                </figure>
                 </center>
               </td>
-              <td class="csm">
+              <td class="csm fimage">
                 <center>
-                  <a href = "https://warhammer40k.fandom.com/wiki/Chaos_Space_Marines" target = _blank  title ="Click for Faction Info"> <img src = "images/csm.jpg" alt = "Chaos Space Marine" width = "250" height="320"/> </a>
+                  <figure class="thumbnail">
+                    <img src = "images/csm.jpg" alt = "Chaos Space Marine" width = "250" height="320"/>
+                    <figcaption class="popup">
+                      <a href = "https://warhammer40k.fandom.com/wiki/Chaos_Space_Marines" target = _blank  title ="Click for Faction Info"><img src = "images/csm.jpg" alt = "Chaos Space Marine" ></a>
+                    </figcaption>
+                  </figure>
                 </center>
               </td>
-              <td class="ts">
+              <td class="ts fimage">
                 <center>
-                  <a href = "https://warhammer40k.fandom.com/wiki/Thousand_Sons" target = "_blank"  title ="Click for Faction Info"> <img src = "images/thousandsons.png" alt = "Thousand Sons" width = "250" height="320"/> </a>
+                  <figure class="thumbnail">
+                    <img src = "images/thousandsons.png" alt = "Thousand Sons" width = "250" height="320"/> </a>
+                    <figcaption class="popup">
+                      <a href = "https://warhammer40k.fandom.com/wiki/Thousand_Sons" target = "_blank"  title ="Click for Faction Info"> <img src = "images/thousandsons.png"/ ></a>
+                    </figcaption>
+                  </figure>
                 </center>
               </td>
             </tr>
