--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <br>
       <div class="leftcol">
           afibdhahifpda
-          <img src="images/propa1.jpg" alt="Propaganda1" width="230" height="550" />
-      </div>
+          <a href="enlist.html" title="Click to Enlist"><img src="images/propa1.jpg" alt="Propaganda1" width="230" height="550" /></a>
+</div>
       <div class = "midcol">
         <p>
             <center> Click on an image to view lore about that faction </center>
