--- a/enlist.html
+++ b/enlist.html
@@ -1,3 +1,7 @@
 <html>
+<head>
+    <title>Guard Enlistment Application</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
   
 </html>
