--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       </h1>
       <br>
       <div class="leftcol">
-          afibdhahifpda
+          File your application into the Imperial Guard today!!!
           <a href="enlist.html" title="Click to Enlist"><img src="images/propa1.jpg" alt="Propaganda1" width="230" height="550" /></a>
 </div>
       <div class = "midcol">
