--- a/index.html
+++ b/index.html
@@ -12,45 +12,30 @@
       <div class="leftcol">
           File your application into the Imperial Guard today!!!
           <a href="enlist.html" title="Click to Enlist"><img src="images/propa1.jpg" alt="Propaganda1" width="230" height="500" /></a>
+</div>
       </div>
       <div class = "midcol">
         <p>
             <center> Click on an image to view lore about that faction </center>
         </p>
-
           <table class="factions" width = "100%">
             <tr width = "100%">
               <th class = "thead" colspan="3">Factions:</th>
             </tr>
             <tr>
-              <td class = "sm fimage">
+              <td class = "sm">
                 <center>
-                  <figure class="thumbnail">
-                    <img src = "images/spacemarines.jpg" alt = "Space Marine" width = "250" height="320"/>
-                  <figcaption class="popup">
-                    <a href = "https://warhammer40k.fandom.com/wiki/Space_Marines" target = "_blank" title ="Click for Faction Info"><img src = "images/spacemarines.jpg" /></a>
-                  </figcaption>
-                </figure>
+                  <a href = "https://warhammer40k.fandom.com/wiki/Space_Marines" target = "_blank" title ="Click for Faction Info"><img src = "images/spacemarines.jpg" alt = "Space Marine" width = "250" height="320"/></a>
                 </center>
               </td>
-              <td class="csm fimage">
+              <td class="csm">
                 <center>
-                  <figure class="thumbnail">
-                    <img src = "images/csm.jpg" alt = "Chaos Space Marine" width = "250" height="320"/>
-                    <figcaption class="popup">
-                      <a href = "https://warhammer40k.fandom.com/wiki/Chaos_Space_Marines" target = _blank  title ="Click for Faction Info"><img src = "images/csm.jpg" alt = "Chaos Space Marine" ></a>
-                    </figcaption>
-                  </figure>
+                  <a href = "https://warhammer40k.fandom.com/wiki/Chaos_Space_Marines" target = _blank  title ="Click for Faction Info"> <img src = "images/csm.jpg" alt = "Chaos Space Marine" width = "250" height="320"/> </a>
                 </center>
               </td>
-              <td class="ts fimage">
+              <td class="ts">
                 <center>
-                  <figure class="thumbnail">
-                    <img src = "images/thousandsons.png" alt = "Thousand Sons" width = "250" height="320"/> </a>
-                    <figcaption class="popup">
-                      <a href = "https://warhammer40k.fandom.com/wiki/Thousand_Sons" target = "_blank"  title ="Click for Faction Info"> <img src = "images/thousandsons.png"/ ></a>
-                    </figcaption>
-                  </figure>
+                  <a href = "https://warhammer40k.fandom.com/wiki/Thousand_Sons" target = "_blank"  title ="Click for Faction Info"> <img src = "images/thousandsons.png" alt = "Thousand Sons" width = "250" height="320"/> </a>
                 </center>
               </td>
             </tr>
@@ -90,7 +75,6 @@
                 </center>
               </td>
             </tr>
-
           </table>
         </div>
         <div class="rightcol">
@@ -98,7 +82,6 @@
           <br>
           <br>
           <br>
-
             <center>Sign up for Newsletter!:</center>
             <form action="http://examples.funwebdev.com/process.php" method="GET" >
               <br>First name:<br> <input type = "text" name = "first_name" />
@@ -106,12 +89,10 @@
               <br>Email Address:<br> <input type = "text" name = "email_address" />
               <br><input type = "radio" name = "newsletter" value = "newsletter_yes"> Sign me up to receive the newsletter!
               <br><label for="favfaction">Choose your favorite faction!:</label>
-
                 <select name="favfaction" id="favfaction">
                   <option value="spacemarines">Space Marines</option>
                   <option value="chaosmarines">Chaos Space Marines</option>
                   <option value="thousandsons">Thousand Sons</option>
-
                 </select>
               <br><input type = "submit" name = "submit" value = "Submit" />
               <br><input type = "reset" name = "reset"  value = "Reset" />
