--- a/index.html
+++ b/index.html
@@ -86,8 +86,23 @@
             <form action="http://examples.funwebdev.com/process.php" method="GET" >
               <br>First name:<br> <input type = "text" name = "first_name" />
               <br>Last name:<br> <input type = "text" name = "last_name" />
-              <br>Email Address:<br> <input type = "text" name = "email_address" />
+
+              <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+              <script type="text/javascript">
+                $(function () {
+                  $("input[name=newsletter]").click(function () {
+                   if ($(this).val() == "Yes") {
+                    $("#email_address").removeAttr("disabled");
+                   } else {
+                    $("#email_address").attr("disabled", "disabled");
+                  }
+                  });
+                });
+                </script>
+
               <br><input type = "radio" name = "newsletter" value = "newsletter_yes"> Sign me up to receive the newsletter!
+              <br>Email Address:<br> <input type = "text" name = "email_address" />
+              
               <br><label for="favfaction">Choose your favorite faction!:</label>
                 <select name="favfaction" id="favfaction">
                   <option value="spacemarines">Space Marines</option>
