--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 $(function () {
                   $("input[name=newsletter]").click(function () {
                    if ($(this).val() == "Yes") {
-                    $("#email_address").removeAttr("disabled");
+                    $("#email_address").removeAttr("enabled");
                    } else {
                     $("#email_address").attr("disabled", "disabled");
                   }
