--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 $(function () {
                   $("input[name=newsletter]").click(function () {
                    if ($(this).val() == "Yes") {
-                    $("#email_address").removeAttr("enabled");
+                    $("#email_address").removeAttr("disabled");
                    } else {
                     $("#email_address").attr("disabled", "disabled");
                   }
@@ -100,7 +100,7 @@
                 });
                 </script>
 
-              <br><input type = "radio" name = "newsletter" value = "newsletter_yes"> Sign me up to receive the newsletter!
+              <br><input type = "button" name = "newsletter" value = "newsletter_yes"> Sign me up to receive the newsletter!
               <br>Email Address:<br> <input type = "text" name = "email_address" />
               
               <br><label for="favfaction">Choose your favorite faction!:</label>
