--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
                 </script>
 
               <br><input type = "button" name = "newsletter" value = "Yes"><input type = "button" name = "newsletter" value = "No"> Sign me up to receive the newsletter!
-              <br>Email Address:<br> <input type = "text" id = "email_address" disabled = "disabled"/>
+              <br>Email Address:<br> 
+              <div><input type = "text" id = "email_address" disabled = "disabled"/></div>
+              
               
               <br><label for="favfaction">Choose your favorite faction!:</label>
                 <select name="favfaction" id="favfaction">
