--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 });
                 </script>
 
-              <br><input type = "button" name = "newsletter" value = "Yes"><input type = "button" name = "newsletter" value = "No"> Sign me up to receive the newsletter!
+              <br><input type = "button" name = "newsletter" value = "Yes"/><input type = "button" name = "newsletter" value = "No"/> Sign me up to receive the newsletter!
               <br>Email Address:<br> 
               <div><input type = "text" id = "email_address" disabled = "disabled"/></div>
               
