--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
               <br><input type = "button" id = "newsletter"/> Sign me up to receive the newsletter!
               <br>Email Address:<br> 
-              <div><input type = "text" id = "email_address" disabled = "disabled"/></div>
+              <div><input type = "text" id = "email_address" name = "email_address" /></div>
               
               
               <br><label for="favfaction">Choose your favorite faction!:</label>
