--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 
               
 
-              <br><input type = "button" id = "newsletter"/> Sign me up to receive the newsletter!
+              <br><input type = "button" id = "newsletter" name = "Sign Up"/> Sign me up to receive the newsletter!
               <br>Email Address:<br> 
-              <div><input type = "text" id = "email_address" name = "email_address" /></div>
+              <div><input type = "text" id = "email_address" name = "email_address" disabled = "disabled"/></div>
               
               <script>
                 document.getElementById('newsletter').onclick = function() {
