--- a/index.html
+++ b/index.html
@@ -91,15 +91,18 @@
 
               <br><input type = "button" id = "newsletter" name = "Sign Up"/> Sign me up to receive the newsletter!
               <br>Email Address:<br> 
-              <div><input type = "text" id = "email_address" name = "email_address" disabled = "disabled"/></div>
+              <div><input type = "text" id = "email_address" name = "email_address" disabled = "disabled" hidden/></div>
               
               <script>
                 document.getElementById('newsletter').onclick = function() {
                     var disabled = document.getElementById("email_address").disabled;
+                    var hidden = document.getElementById("email_address").hidden;
                      if (disabled) {
                       document.getElementById("email_address").disabled = false;
+                      document.getElementById("email_address").hidden = false;
                      } else {
                       document.getElementById("email_address").disabled = true;
+                      document.getElementById("email_address").hidden = true;
                     }
                     
                   }
