--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
               
 
-              <br><input type = "button" id = "newsletter" name = "Sign Up"/> Sign me up to receive the newsletter!
+              <br><input type = "button" id = "newsletter" value = "Sign Up"/> Sign me up to receive the newsletter!
               <br>Email Address:<br> 
               <div><input type = "text" id = "email_address" name = "email_address" disabled = "disabled" hidden/></div>
               
