--- a/index.html
+++ b/index.html
@@ -99,13 +99,17 @@
                     var hidden = document.getElementById("email_address").hidden;
                      if (disabled) {
                       document.getElementById("email_address").disabled = false;
-                      document.getElementById("email_address").hidden = false;
+                      //document.getElementById("email_address").hidden = false;
                      } else {
                       document.getElementById("email_address").disabled = true;
-                      document.getElementById("email_address").hidden = true;
+                      //document.getElementById("email_address").hidden = true;
                     }
                     
-                  }
+                }
+
+                $("newsletter").click(function(){
+                $("email_address").show();
+                });
               </script>
               
               <br><label for="favfaction">Choose your favorite faction!:</label>
