--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <title>Warhammer Roster Maker</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body>
     <div id = "div1" >
