--- a/index.html
+++ b/index.html
@@ -93,16 +93,18 @@
 
               <br><input type = "button" id = "newsletter" value = "Sign Up"/> Sign me up to receive the newsletter!
               <br>Email Address:<br> 
-              <div><input type = "text" id = "email_address" name = "email_address" hidden = "hidden"/></div>
+              <div><input type = "text" id = "email_address" name = "email_address" value = "hidden"/></div>
               
               <script>
                $(document).ready(function(){
                   $("newsletter").click(function(){
                     if($("#email_address").val() == "hidden"){
                       $("email_address").show();
+                      $("#email_address").attr("value", "unhidden");
                     }
                     else{
                       $("email_address").hide();
+                      $("#email_address").attr("value", "hidden");
                     }
                     
                   });
