--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
               <br><input type = "button" id = "newsletter" value = "Sign Up"/> Sign me up to receive the newsletter!
               <br>Email Address:<br> 
-              <div><input type = "text" id = "email_address" name = "email_address" secret = "hidden"/></div>
+              <div><input type = "text" id = "email_address" name = "email_address" secret = "hidden" hidden/></div>
               
               <script>
                $(document).ready(function(){
