--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Warhammer Roster Maker</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
     <div id = "div1" >
