--- a/index.html
+++ b/index.html
@@ -3,6 +3,28 @@
     <title>Warhammer Roster Maker</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <?php
+      $servername = "localhost";
+      $username = "username";
+      $password = "password";
+
+      // Create connection
+      $conn = new mysqli($servername, $username, $password);
+      // Check connection
+      if ($conn->connect_error) {
+        die("Connection failed: " . $conn->connect_error);
+      }
+
+      // Create database
+      $sql = "CREATE DATABASE myDB";
+      if ($conn->query($sql) === TRUE) {
+        echo "Database created successfully";
+      } else {
+        echo "Error creating database: " . $conn->error;
+      }
+
+      $conn->close();
+    ?>
   </head>
   <body>
     <div id = "div1" >
