--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
               <br><input type = "submit" name = "submit" value = "Submit" />
               <br><input type = "reset" name = "reset"  value = "Reset" />
             </form>
+            Welcome <?php echo $_GET["first_name"]; ?><br>
+            Your email is: <?php echo $_GET["email_address"]; ?><br>
+            Your favorite faction is: <?php echo $_GET["favfaction"]; ?>
         </div>
     </div>
   </body>
