--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <title>Warhammer Roster Maker</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    
+  </head>
+  <body action="http://examples.funwebdev.com/process.php" method="GET">
     <?php
       $servername = "localhost";
       $username = "username";
@@ -25,8 +28,6 @@
 
       $conn->close();
     ?>
-  </head>
-  <body>
     <div id = "div1" >
       <h1 id = "header" class = "header">
         <center>Warhammer 40,000 Roster Maker</center>
