--- a/index.html
+++ b/index.html
@@ -5,29 +5,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     
   </head>
-  <body action="http://examples.funwebdev.com/process.php" method="GET">
-    <?php
-      $servername = "localhost";
-      $username = "username";
-      $password = "password";
-
-      // Create connection
-      $conn = new mysqli($servername, $username, $password);
-      // Check connection
-      if ($conn->connect_error) {
-        die("Connection failed: " . $conn->connect_error);
-      }
-
-      // Create database
-      $sql = "CREATE DATABASE myDB";
-      if ($conn->query($sql) === TRUE) {
-        echo "Database created successfully";
-      } else {
-        echo "Error creating database: " . $conn->error;
-      }
-
-      $conn->close();
-    ?>
+  <body>
+    
     <div id = "div1" >
       <h1 id = "header" class = "header">
         <center>Warhammer 40,000 Roster Maker</center>
@@ -127,6 +106,28 @@
           <br>
             <center>Sign up for Newsletter!:</center>
             <form action="http://examples.funwebdev.com/process.php" method="GET" >
+              <?php
+                $servername = "localhost";
+                $username = "username";
+                $password = "password";
+
+                // Create connection
+                $conn = new mysqli($servername, $username, $password);
+                // Check connection
+                if ($conn->connect_error) {
+                  die("Connection failed: " . $conn->connect_error);
+                }
+
+                // Create database
+                $sql = "CREATE DATABASE myDB";
+                if ($conn->query($sql) === TRUE) {
+                  echo "Database created successfully";
+                } else {
+                  echo "Error creating database: " . $conn->error;
+                }
+
+                $conn->close();
+              ?>
               <br>First name:<br> <input type = "text" name = "first_name" />
               <br>Last name:<br> <input type = "text" name = "last_name" />
 
