--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <br>
           <br>
             <center>Sign up for Newsletter!:</center>
-            <form action="form.php" method="GET" >
+            <form action="form.php" method="POST" >
               
               <br>First name:<br> <input type = "text" name = "first_name" />
               <br>Last name:<br> <input type = "text" name = "last_name" />
